<resources>
    <string name="app_name">Knimbus</string>
    <string name="bottom_menu_first">Home</string>
    <string name="bottom_menu_second">Search</string>
    <string name="bottom_menu_third">Notes</string>
    <string name="nav_header_default_name">Nikhil Kumar</string>
    <string name="nav_item_one">Home</string>
    <string name="nav_item_two">Search</string>
    <string name="nav_item_three">Notes</string>
    <string name="nav_item_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_item_sign_out">Sign Out</string>

    <string name="send_a_message">Send a message...</string>
    <string name="nav_item_chat_room">Chat Room</string>


    <string-array name="semesters">
        <item>-Select Sem-</item>
        <item>Third Sem</item>
    </string-array>

</resources>
