<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/group1">
        <item
            android:id="@+id/nav_item_home"
            android:title="@string/nav_item_one" />
        <item
            android:id="@+id/nav_item_search"
            android:title="@string/nav_item_two" />
        <item
            android:id="@+id/nav_item_notes"
            android:title="@string/nav_item_three" />
    </group>
    <group android:id="@+id/group2">
        <item
            android:id="@+id/nav_item_chat"
            android:title="@string/nav_item_chat_room"/>
    </group>
    <group android:id="@+id/group3">
        <item
            android:id="@+id/nav_item_settings"
            android:title="@string/nav_item_settings" />
        <item
            android:id="@+id/dd_menu_signOut"
            android:title="@string/nav_item_sign_out" />
    </group>
</menu>